# design_pattern_for_c

./: .gitignore  AUTHORS  CHANGES  LICENSE  Makefile.am  Makefile.in  README  README.md  aclocal.m4  am.conf  autogen.sh  config.h.in  config.h.in~  configure  configure.ac  createVersionScript.sh  libtool  testAll.sh
ChainOfResponsibility/: CoR_am.conf  Makefile.in
ChainOfResponsibility/include/: Makefile.in  chain_of_responsibility.h
ChainOfResponsibility/lib/: Makefile.am  Makefile.in  chain_element.c  chain_element.h  chain_of_responsibility.c
ChainOfResponsibility/test/: Makefile.am  Makefile.in
builder/: Makefile.am  Makefile.in  README.md  builder_am.conf
builder/conf/: device_plugin.con  sample.conf
builder/include/: Makefile.am  Makefile.in  lower_layer_builder.h  lower_layer_director.h
builder/lib/: Makefile  Makefile.am  Makefile.in  builder.map  builder_action.c  builder_action.h  director.c  director.h  lower_layer_director.c
builder/sample_plugin/: Makefile.am  Makefile.in  device_plugin_if.h  ossupport_device_plugin.c  ossupport_device_plugin.h  usb_device_plugin.c  usb_device_plugin.h
builder/test/: Makefile.am  Makefile.in  main.c
chain_of_responsibility/: Makefile.in  README.md
chain_of_responsibility/include/: Makefile.am  Makefile.in  chain_of_responsibility.h
chain_of_responsibility/lib/: Makefile.am  Makefile.in  chain_element.c  chain_element.h  chain_of_responsibility.c  chain_of_responsibility.map
chain_of_responsibility/test/: Makefile.am  Makefile.in  main.c
combination_sample/: Makefile.am  Makefile.in
combination_sample/publisher_with_fd/: Makefile.am  Makefile.in  main.c
command/: Makefile.in
command/sample/: Makefile.am  Makefile.in  answer.h  answer_blue.c  answer_infra_red.c  answer_red.c  interviewer.h  interviewer_blue.c  interviewer_red.c  main.c
design_pattern_util/: Makefile.am  Makefile.in
design_pattern_util/include/: Makefile.am  Makefile.in  dp_debug.h  dp_define.h  dp_list.h  dp_mutex.h  dp_util.h
design_pattern_util/lib/: Makefile.am  Makefile.in  dp_timelog.c  dp_util.c
design_pattern_util/lib/.deps/: dp_util.Plo
design_pattern_util/sample/: Makefile.am  Makefile.in  log.txt  main.c  speedcheck.rb
flyweight/: Makefile.am  Makefile.in  README  README.md  flyweight_am.conf
flyweight/include/: Makefile.am  Makefile.in  flyweight.h
flyweight/interface_sample/: Makefile  Makefile.am  Makefile.in  alpha_complex.c  culture.c  culture.h  germany.c  japan.c  japan.h  main.c  members.h  us.c
flyweight/lib/: Makefile.am  Makefile.in  flyweight.c  flyweight.map
flyweight/lib/.deps/: flyweight.Plo  libflyweight_la-flyweight.Plo
flyweight/sample/: Makefile  Makefile.am  Makefile.in  area_class.c  city_class.c  city_class.h
flyweight/sample2/: Makefile  Makefile.am  Makefile.in  area_class.h  city_appearance.c  common.h  cover_up_the_fact_city.c  cover_up_the_fact_city.h  human_class.c  human_class.h  main.c
flyweight/test/: Makefile.am  Makefile.in  main.c  test.h  test_methodsclass.c  test_normalclass.c
flyweight/test/.deps/: main.Po  test-main.Po
mediator/: Makefile.in
mediator/sample/: Makefile.am  Makefile.in  SUPPLEMENT.txt  colleague.h  colleague_priest.c  colleague_priest.h  colleague_warrior.c  colleague_warrior.h  colleague_witch.c  colleague_witch.h  colleagues.h  main.c  mediator.c  mediator.h
mement/: Makefile.in  mement_am.conf
mement/include/: Makefile.am  Makefile.in  mement.h
mement/lib/: Makefile.am  Makefile.in  mement.c
mement/test/: Makefile.am  Makefile.in  main.c
memorypool/: Makefile.in  memorypool_am.conf
memorypool/include/: Makefile.am  Makefile.in  memorypool.h
memorypool/lib/: Makefile.am  Makefile.in  memorypool.c  memorypool.map
memorypool/test/: Makefile.am  Makefile.in  main.c
prototype/: Makefile.in  prototype_am.conf
prototype/include/: Makefile.am  Makefile.in  prototype.h
prototype/lib/: Makefile.am  Makefile.in  prototype.map  prototype_factory.c  prototype_factory.h  prototype_manager.c
prototype/test/: Makefile.am  Makefile.in  main.c
proxy/: Makefile.am  Makefile.in  README
proxy/sample1/: Makefile.am  Makefile.in  main.c  proxyfunc.c  proxyfunc.h  testif.c  testif.h
proxy/sample2/: Makefile.am  Makefile.in  fopenProxy.sh  fopen_wrapper.c  main.c
publisher/: Makefile.am  Makefile.in  README  publisher_am.conf
publisher/include/: Makefile.am  Makefile.in  publisher.h
publisher/lib/: Makefile.am  Makefile.in  debug.h  publish_content.c  publish_content.h  publisher.c  publisher.map
publisher/sample/: Makefile.am  Makefile.in  main.c  publish_msg.h  subscriber.c  subscriber.h
publisher/test/: Makefile.am  Makefile.in  main.c
state/: Makefile.in  README  state_am.conf
state/include/: Makefile  Makefile.am  Makefile.in  state_machine.h  state_manager.h
state/lib/: Makefile.am  Makefile.in  state_machine.c  state_machine.map  state_manager.c
state/test/: Makefile.am  Makefile.in  main.c  test_state_machine.c  test_state_machine.h  test_state_manager.c  test_state_manager.h
test/: README.md  coverage.sh  coverageResult.sh  testAll.sh
threadpool/: Makefile.am  Makefile.in  README  README.md  threadpool_am.conf
threadpool/event_if/: Makefile.am  Makefile.in  event_if_epoll.c  event_if_libev.c  event_if_libevent.c  event_if_select.c
threadpool/include/: Makefile.am  Makefile.in  event_threadpool.h  event_threadpool_data.h  tpool_event_if.h
threadpool/lib/: Makefile.am  Makefile.in  event_epoll.c  event_if.h  event_if_epoll.c  event_if_libev.c  event_if_libevent.c  event_if_select.c  event_libevent.c  event_thread.c  event_thread.h  event_tpool_manager.c  threadpool.map
threadpool/test/: Makefile.am  Makefile.in  main.c  test_main.c  test_main.h
