SUBDIRS=design_pattern_util
if USE_FLYWEIGHT
SUBDIRS+= flyweight
endif

if USE_BUILDER
SUBDIRS+= builder
endif

if USE_PUBLISHER
SUBDIRS+= publisher
endif

if USE_THREADPOOL
SUBDIRS+= threadpool
endif

if USE_STATE
SUBDIRS+= state
endif

if USE_COR
SUBDIRS+= chain_of_responsibility
endif

if USE_MEMPOOL
SUBDIRS+= memorypool
endif

if USE_PROTOTYPE
SUBDIRS+= prototype
endif

if USE_SAMPLE
SUBDIRS+= combination_sample
endif
